--- a/red-bicicletas/red_bicicletas/views/index.pug
+++ b/red-bicicletas/red_bicicletas/views/index.pug
@@ -149,7 +149,7 @@ footer.footer.bg-black.small.text-center.text-white-50
 // Bootstrap core JS
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
 // Core theme JS
-script(src='js/scripts.js')
+script(src='/js/scripts.js')
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 // * *                               SB Forms JS                               * *
 // * * Activate your form at https://startbootstrap.com/solution/contact-forms * *
