--- a/red-bicicletas/red_bicicletas/views/index.pug
+++ b/red-bicicletas/red_bicicletas/views/index.pug
@@ -37,40 +37,8 @@ block content
       img.img-fluid(src='assets/img/ipad.png' alt='...')
   // Projects
   section#projects.projects-section.bg-light
-    .container.px-4.px-lg-5
-      // Featured Project Row
-      .row.gx-0.mb-4.mb-lg-5.align-items-center
-        .col-xl-8.col-lg-7
-          img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg' alt='...')
-        .col-xl-4.col-lg-5
-          .featured-text.text-center.text-lg-left
-            h4 Shoreline
-            p.text-black-50.mb-0
-              | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
-      // Project One Row
-      .row.gx-0.mb-5.mb-lg-0.justify-content-center
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-01.jpg' alt='...')
-        .col-lg-6
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-left
-                h4.text-white Misty
-                p.mb-0.text-white-50
-                  | An example of where you can put an image of a project, or anything else, along with a description.
-                hr.d-none.d-lg-block.mb-0.ms-0
-      // Project Two Row
-      .row.gx-0.justify-content-center
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-02.jpg' alt='...')
-        .col-lg-6.order-lg-first
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-right
-                h4.text-white Mountains
-                p.mb-0.text-white-50
-                  | Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!
-                hr.d-none.d-lg-block.mb-0.me-0
+    .container.px-4.px-lg-5 
+      #map      
   // Signup
   section#signup.signup-section
     .container.px-4.px-lg-5
@@ -149,7 +117,7 @@ block content
   // Bootstrap core JS
   script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
   // Core theme JS
-  script(src='js/scripts.js')
+  script(src='/js/scripts.js')
   // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   // * *                               SB Forms JS                               * *
   // * * Activate your form at https://startbootstrap.com/solution/contact-forms * *
