--- a/red-bicicletas/red_bicicletas/views/index.pug
+++ b/red-bicicletas/red_bicicletas/views/index.pug
@@ -38,7 +38,7 @@ block content
   // Projects
   section#projects.projects-section.bg-light
     .container.px-4.px-lg-5 
-      #map      
+      #map
   // Signup
   section#signup.signup-section
     .container.px-4.px-lg-5
@@ -123,4 +123,6 @@ block content
   // * * Activate your form at https://startbootstrap.com/solution/contact-forms * *
   // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   script(src='https://cdn.startbootstrap.com/sb-forms-latest.js')
+  // Map
+  script(src='/js/map.js')
 
