--- a/red-bicicletas/red_bicicletas/views/bikes/index.pug
+++ b/red-bicicletas/red_bicicletas/views/bikes/index.pug
@@ -1,13 +1,16 @@
 extends ../layout 
 
-block content 
+block content
+    a(href='/bikes/create') Nueva Bicicleta 
     table.table 
       thead 
         tr 
           th(scope='col') #
           th(scope='col') Color
-          th(scope='col') Model
-          th(scope='col') Location
+          th(scope='col') Modelo
+          th(scope='col') Ubicacion
+          th(scope='col')
+          th(scope='col') 
       tbody 
         each bike in bikes
           tr
@@ -16,4 +19,11 @@ block content
             td= bike.color 
             td= bike.model 
             td= bike.location
+            td
+             a(href='bikes/' + bike.id + '/update') Editar 
+            td
+             form.inline(method='post' action='bikes/'+ bike.id + '/delete')
+                 input(type="hidden" name='id' value= bike.id)
+                 button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
+                     = 'Eliminar'   
           
