--- a/red-bicicletas/red_bicicletas/views/layout.pug
+++ b/red-bicicletas/red_bicicletas/views/layout.pug
@@ -14,7 +14,7 @@ html
     link(href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i' rel='stylesheet')
     // Core theme CSS (includes Bootstrap)
-    link(href='css/styles.css' rel='stylesheet')
+    link(href='/css/styles.css' rel='stylesheet')
     link(rel='stylesheet' href='https://unpkg.com/leaflet@1.8.0/dist/leaflet.css' integrity='sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==' crossorigin='')
     script(src='https://unpkg.com/leaflet@1.8.0/dist/leaflet.js' integrity='sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==' crossorigin='')
   body
