--- a/red-bicicletas/red_bicicletas/views/bikes/create.pug
+++ b/red-bicicletas/red_bicicletas/views/bikes/create.pug
@@ -29,5 +29,5 @@ block content
     input#model(type='text' name='lng')
     br
     br
-    ibput.btn(type='submit' value='OK') Confirmar
+    button(type='submit' value='OK') Confirmar
     
