--- a/red-bicicletas/red_bicicletas/views/index.pug
+++ b/red-bicicletas/red_bicicletas/views/index.pug
@@ -124,5 +124,7 @@ block content
   // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   script(src='https://cdn.startbootstrap.com/sb-forms-latest.js')
   // Map
+  script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript')
   script(src='/js/map.js')
+  
 
