--- a/red-bicicletas/red_bicicletas/views/index.pug
+++ b/red-bicicletas/red_bicicletas/views/index.pug
@@ -4,26 +4,26 @@ block content
   // Navigation
   nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
     .container.px-4.px-lg-5
-      a.navbar-brand(href='#page-top') Start Bootstrap
+      a.navbar-brand(href='#page-top') Red Bicicletas
       button.navbar-toggler.navbar-toggler-right(type='button' data-bs-toggle='collapse' data-bs-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
         | Menu
         i.fas.fa-bars
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ms-auto
           li.nav-item
-            a.nav-link(href='#about') About
+            a.nav-link(href='#about') Nosotros
           li.nav-item
-            a.nav-link(href='#projects') Projects
+            a.nav-link(href='#projects') Bicis
           li.nav-item
-            a.nav-link(href='#signup') Contact
+            a.nav-link(href='#signup') Contacto
   // Masthead
   header.masthead
     .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
       .d-flex.justify-content-center
         .text-center
-          h1.mx-auto.my-0.text-uppercase Grayscale
-          h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
-          a.btn.btn-primary(href='#about') Get Started
+          h1.mx-auto.my-0.text-uppercase Red Bicicletas
+          h2.text-white-50.mx-auto.mt-2.mb-5 Bienvenido a express
+          a.btn.btn-primary(href='#about') Comenzar
   // About
   section#about.about-section.text-center
     .container.px-4.px-lg-5
