--- a/red-bicicletas/red_bicicletas/views/users/edit.pug
+++ b/red-bicicletas/red_bicicletas/views/users/edit.pug
@@ -15,7 +15,7 @@ block content
   form(action=`/users/${user.id}/update` method='post')
     .form-group 
         label(for='name') Nombre:
-        input#name.form-control(type='text' name='name' value= usuario.name class= errors.name)
+        input#name.form-control(type='text' name='name' value= user.name class= errors.name)
         if errors.name 
             small#nameHelp.text-danger 
                 = errors.name.message 
